--- a/quick-test/index.html
+++ b/quick-test/index.html
@@ -77,7 +77,7 @@
             <div class="bg-gray-800 rounded-lg p-6 border border-gray-700">
                 <h2 class="text-xl font-semibold text-blue-300 mb-3">Testing Guide</h2>
                 <p class="text-gray-300 text-sm mb-4">Complete step-by-step testing instructions and success criteria.</p>
-                <a href="./TESTING_GUIDE.md" class="block w-full bg-blue-600 hover:bg-blue-500 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
+                <a href="https://dev.wrestling.systems/testing-guide/" class="block w-full bg-blue-600 hover:bg-blue-500 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
                     View Testing Guide
                 </a>
                 <div class="mt-3 text-xs text-gray-400">
