Fix RepDown back navigation to point to enhanced dashboard

--- a/repdown/index.html
+++ b/repdown/index.html
@@ -679,7 +679,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             initFirebase();
             signOutBtn.addEventListener('click', () => signOut(auth));
-            backToDashboardBtn.addEventListener('click', () => window.location.href = 'https://dev.wrestling.systems/dashboard');
+            backToDashboardBtn.addEventListener('click', () => window.location.href = 'https://dev.wrestling.systems/dashboard-enhanced/');
             letsGoBtn.addEventListener('click', showSetupScreen);
             backToHubFromSetupBtn.addEventListener('click', showHubScreen);
             startBtn.addEventListener('click', startWorkout);
