Add enhanced dashboard promotion notice to old dashboard

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -95,7 +95,17 @@
                     </div>
                 </div>
 
-                <a href="https://dev.wrestling.systems/repdown" class="mt-8 w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm font-medium text-black bg-gold-500 hover:bg-gold-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gold-500 focus:ring-offset-gray-900 transition-all duration-300">
+                <!-- Dashboard Migration Notice -->
+                <div class="mt-8 p-4 bg-blue-900/30 border border-blue-500/30 rounded-lg text-center">
+                    <h3 class="text-lg font-semibold text-blue-300 mb-2">🆕 Enhanced Dashboard Available</h3>
+                    <p class="text-sm text-gray-300 mb-3">Try the new enhanced dashboard with rich athlete profiles, age tracking, and improved features!</p>
+                    <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="inline-flex items-center px-4 py-2 bg-blue-600 hover:bg-blue-500 text-white rounded-md font-medium transition-colors mr-3">
+                        Try Enhanced Dashboard
+                    </a>
+                    <span class="text-xs text-gray-400">All data syncs between dashboards</span>
+                </div>
+
+                <a href="https://dev.wrestling.systems/repdown" class="mt-6 w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm font-medium text-black bg-gold-500 hover:bg-gold-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gold-500 focus:ring-offset-gray-900 transition-all duration-300">
                     Go to Rep Down Challenge
                 </a>
             </div>
