Add simple dashboard link to enhanced dashboard

--- a/dashboard-enhanced/index.html
+++ b/dashboard-enhanced/index.html
@@ -149,6 +149,13 @@
                         View Analytics (Coming Soon)
                     </button>
                 </div>
+
+                <!-- Simple Dashboard Link -->
+                <div class="mt-6 text-center">
+                    <a href="https://dev.wrestling.systems/dashboard/" class="text-sm text-gray-400 hover:text-gray-300 underline">
+                        Prefer the simple dashboard? Click here
+                    </a>
+                </div>
             </div>
         </div>
     </div>
