--- a/quick-test/index.html
+++ b/quick-test/index.html
@@ -63,7 +63,7 @@
             <div class="bg-gray-800 rounded-lg p-6 border border-gray-700">
                 <h2 class="text-xl font-semibold text-gray-300 mb-3">Original Dashboard</h2>
                 <p class="text-gray-300 text-sm mb-4">Compare with the original dashboard to see improvements.</p>
-                <a href="./dashboard/" class="block w-full bg-gray-600 hover:bg-gray-500 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
+                <a href="https://dev.wrestling.systems/dashboard/" class="block w-full bg-gray-600 hover:bg-gray-500 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
                     View Original
                 </a>
                 <div class="mt-3 text-xs text-gray-400">
