--- a/quick-test/index.html
+++ b/quick-test/index.html
@@ -15,19 +15,19 @@
     <div class="max-w-4xl mx-auto">
         <h1 class="text-4xl font-bold text-white text-center mb-8">🧪 Quick Testing Hub</h1>
         
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             
-            <!-- Enhanced Dashboard -->
+            <!-- Athlete Dashboard -->
             <div class="bg-gray-800 rounded-lg p-6 border border-gray-700">
-                <h2 class="text-xl font-semibold text-gold-300 mb-3">Enhanced Dashboard</h2>
-                <p class="text-gray-300 text-sm mb-4">Test the new athlete management system with rich profiles and relationships.</p>
-                <a href="./dashboard-enhanced.html" class="block w-full bg-gold-500 hover:bg-gold-600 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
-                    Test Enhanced Dashboard
+                <h2 class="text-xl font-semibold text-gold-300 mb-3">Athlete Dashboard</h2>
+                <p class="text-gray-300 text-sm mb-4">Manage athlete profiles with rich metadata, relationships, and progress tracking.</p>
+                <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="block w-full bg-gold-500 hover:bg-gold-600 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
+                    Test Dashboard
                 </a>
                 <div class="mt-3 text-xs text-gray-400">
                     <p>✅ Rich athlete profiles</p>
                     <p>✅ Age calculation</p>
-                    <p>✅ Legacy migration</p>
+                    <p>✅ Unified data structure</p>
                 </div>
             </div>
 
@@ -59,17 +59,17 @@
                 </div>
             </div>
 
-            <!-- Original Dashboard -->
+            <!-- Additional Tools -->
             <div class="bg-gray-800 rounded-lg p-6 border border-gray-700">
-                <h2 class="text-xl font-semibold text-gray-300 mb-3">Original Dashboard</h2>
-                <p class="text-gray-300 text-sm mb-4">Compare with the original dashboard to see improvements.</p>
-                <a href="https://dev.wrestling.systems/dashboard/" class="block w-full bg-gray-600 hover:bg-gray-500 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
-                    View Original
-                </a>
+                <h2 class="text-xl font-semibold text-gray-300 mb-3">Additional Tools</h2>
+                <p class="text-gray-300 text-sm mb-4">More tools and integrations coming soon to enhance your wrestling training.</p>
+                <button class="block w-full bg-gray-600 text-white text-center py-2 px-4 rounded-md font-medium transition-colors cursor-not-allowed" disabled>
+                    More Tools (Coming Soon)
+                </button>
                 <div class="mt-3 text-xs text-gray-400">
-                    <p>↩️ Legacy system</p>
-                    <p>↩️ Simple athletes</p>
-                    <p>↩️ Array structure</p>
+                    <p>🔜 Skills tracking</p>
+                    <p>🔜 Competition prep</p>
+                    <p>🔜 Team management</p>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
                 <div class="bg-green-900/30 border border-green-500/30 rounded p-4">
                     <div class="text-2xl mb-2">1️⃣</div>
                     <h3 class="font-semibold text-green-300">Create Athletes</h3>
-                    <p class="text-sm text-green-200">Enhanced Dashboard</p>
+                    <p class="text-sm text-green-200">Athlete Dashboard</p>
                 </div>
                 <div class="bg-blue-900/30 border border-blue-500/30 rounded p-4">
                     <div class="text-2xl mb-2">2️⃣</div>
@@ -135,7 +135,7 @@
             <h3 class="text-lg font-semibold text-white mb-4">🎯 Quick Status Check</h3>
             <div class="space-y-2 text-sm">
                 <div class="flex justify-between">
-                    <span class="text-gray-300">Enhanced Dashboard:</span>
+                    <span class="text-gray-300">Athlete Dashboard:</span>
                     <span class="text-green-400">✅ Ready</span>
                 </div>
                 <div class="flex justify-between">
@@ -151,8 +151,8 @@
                     <span class="text-green-400">✅ Implemented</span>
                 </div>
                 <div class="flex justify-between">
-                    <span class="text-gray-300">Legacy Migration:</span>
-                    <span class="text-green-400">✅ Supported</span>
+                    <span class="text-gray-300">Cross-Platform Sync:</span>
+                    <span class="text-green-400">✅ Active</span>
                 </div>
             </div>
         </div>
