--- a/quick-test/index.html
+++ b/quick-test/index.html
@@ -21,7 +21,7 @@
             <div class="bg-gray-800 rounded-lg p-6 border border-gray-700">
                 <h2 class="text-xl font-semibold text-gold-300 mb-3">Athlete Dashboard</h2>
                 <p class="text-gray-300 text-sm mb-4">Manage athlete profiles with rich metadata, relationships, and progress tracking.</p>
-                <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="block w-full bg-gold-500 hover:bg-gold-600 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
+                <a href="https://dev.wrestling.systems/dashboard/" class="block w-full bg-gold-500 hover:bg-gold-600 text-white text-center py-2 px-4 rounded-md font-medium transition-colors">
                     Test Dashboard
                 </a>
                 <div class="mt-3 text-xs text-gray-400">
