--- a/testing-guide/index.html
+++ b/testing-guide/index.html
@@ -87,7 +87,7 @@
                 <!-- Enhanced Dashboard -->
                 <div class="bg-green-900/30 border border-green-500/30 rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-green-300 mb-3">1. Enhanced Athlete Dashboard</h3>
-                    <p class="text-sm text-gray-300 mb-3"><strong>URL:</strong> <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="text-gold-300 hover:underline">dashboard-enhanced/</a></p>
+                    <p class="text-sm text-gray-300 mb-3"><strong>URL:</strong> <a href="https://dev.wrestling.systems/dashboard/" class="text-gold-300 hover:underline">dashboard/</a></p>
                     <p class="text-sm text-gray-300">Rich athlete profiles, relationship tracking, age calculation, legacy migration</p>
                 </div>
 
@@ -121,7 +121,7 @@
                     </h4>
                     <div class="bg-gray-900 rounded p-4">
                         <ol class="space-y-2 text-sm text-gray-300">
-                            <li>1. Go to: <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="text-gold-300 hover:underline">https://dev.wrestling.systems/dashboard-enhanced/</a></li>
+                            <li>1. Go to: <a href="https://dev.wrestling.systems/dashboard/" class="text-gold-300 hover:underline">https://dev.wrestling.systems/dashboard/</a></li>
                             <li>2. Sign in with your Firebase account</li>
                             <li>3. Create a new athlete with:
                                 <ul class="ml-4 mt-2 space-y-1">
@@ -275,7 +275,7 @@
         <!-- Quick Actions -->
         <div class="text-center">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-                <a href="https://dev.wrestling.systems/dashboard-enhanced/" class="bg-green-600 hover:bg-green-500 text-white px-4 py-3 rounded-md font-medium transition-colors">
+                <a href="https://dev.wrestling.systems/dashboard/" class="bg-green-600 hover:bg-green-500 text-white px-4 py-3 rounded-md font-medium transition-colors">
                     Start Testing: Dashboard
                 </a>
                 <a href="https://dev.wrestling.systems/workout-builder/" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-3 rounded-md font-medium transition-colors">
