Add data migration request functionality
- Implement handleDataMigrationRequest function in dashboard
- Add event listener for migration request button
- Update Firestore rules to allow migration request submissions
- Store user data, athlete count, and provider information for migration
- Show confirmation dialog and success feedback to users

--- a/index.html
+++ b/index.html
@@ -122,21 +122,24 @@
             </div>
         </div>
         
-        <!-- Unreleased Beta Message -->
+        <!-- Development Beta Warning -->
         <div class="w-full max-w-lg mx-auto mt-8 text-center">
-            <div class="bg-blue-900/20 border border-blue-500/30 rounded-lg p-6">
-                <p class="text-blue-300 font-semibold mb-2">🚧 Development Preview</p>
-                <p class="text-gray-300 text-sm mb-4">
-                    Wrestling.Systems is still in development, but you can check out the current progress and features we're building.
+            <div class="bg-amber-900/20 border border-amber-500/30 rounded-lg p-6">
+                <p class="text-amber-300 font-semibold mb-2">⚠️ Development Beta Site</p>
+                <p class="text-gray-300 text-sm mb-3">
+                    This is a development/testing environment. All accounts and data created here are temporary.
+                </p>
+                <p class="text-amber-200 text-sm font-medium mb-4">
+                    🗑️ All data will be deleted when the official site launches
                 </p>
                 <p class="text-gray-400 text-xs mb-4">
-                    Note: This is a work-in-progress version. Some features may be incomplete or change before the official launch.
+                    Want to keep your data? You'll be able to request a transfer to the official site once it's live.
                 </p>
-                <a href="/login" class="inline-flex items-center px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium rounded-md transition-colors">
+                <a href="/login" class="inline-flex items-center px-4 py-2 bg-amber-600 hover:bg-amber-700 text-white text-sm font-medium rounded-md transition-colors">
                     <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013 3v1"></path>
                     </svg>
-                    Check it out anyway
+                    Test the Beta
                 </a>
             </div>
         </div>
