--- a/login/index.html
+++ b/login/index.html
@@ -236,7 +236,7 @@
                 } else {
                     // User wants to sign in with existing provider
                     console.log("User chose existing provider");
-                    showError(`Please sign in with ${existingProvider.charAt(0).toUpperCase() + existingProvider.slice(1)} instead.`);
+                    showError(`Please sign in with ${getProviderDisplayName(existingProvider)} instead.`);
                 }
             } catch (linkError) {
                 console.error("Account linking error:", linkError);
@@ -251,20 +251,32 @@
             }
         };
 
+        // Get user-friendly provider name
+        const getProviderDisplayName = (provider) => {
+            switch (provider.toLowerCase()) {
+                case 'google': return 'Google';
+                case 'facebook': return 'Facebook';
+                case 'microsoft': return 'Microsoft';
+                case 'email': return 'Email & Password';
+                case 'password': return 'Email & Password';
+                default: return provider.charAt(0).toUpperCase() + provider.slice(1);
+            }
+        };
+
         // Show account linking dialog
         const showAccountLinkingDialog = (email, existingProvider, newProvider) => {
             return new Promise((resolve) => {
-                const existingProviderName = existingProvider.charAt(0).toUpperCase() + existingProvider.slice(1);
-                const newProviderName = newProvider.charAt(0).toUpperCase() + newProvider.slice(1);
+                const existingProviderName = getProviderDisplayName(existingProvider);
+                const newProviderName = getProviderDisplayName(newProvider);
                 
                 const linkingHtml = `
                     <div class="text-left bg-blue-900/20 border border-blue-500/30 rounded-lg p-4">
-                        <p class="font-semibold mb-3">🔗 Link Your Accounts</p>
+                        <p class="font-semibold mb-3">🔗 Account Already Exists</p>
                         <p class="text-sm mb-3">
-                            Hey! This email (<strong>${email}</strong>) is already linked to <strong>${existingProviderName}</strong>.
+                            The email <strong>${email}</strong> already has an account using <strong>${existingProviderName}</strong> authentication.
                         </p>
                         <p class="text-sm mb-4">
-                            Want to link your <strong>${newProviderName}</strong> account so you can sign in with either method?
+                            Would you like to link your <strong>${newProviderName}</strong> account so you can sign in with either method?
                         </p>
                         <div class="flex gap-2 mt-4">
                             <button id="link-accounts-btn" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-3 py-2 rounded transition-colors">
