Fix Firebase API reference errors in OAuth linking
- Replace firebase.auth.GoogleAuthProvider with GoogleAuthProvider
- Replace firebase.auth.FacebookAuthProvider with FacebookAuthProvider
- Replace firebase.auth.OAuthProvider with OAuthProvider
- Replace firebase.auth().fetchSignInMethodsForEmail() with fetchSignInMethodsForEmail(auth, email)
- Replace firebase.auth().signInWithPopup() with signInWithPopup(auth, provider)
- Fix 'firebase is not defined' ReferenceError in automatic OAuth linking
- Apply fixes to landing page, login page, and dashboard

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -583,7 +583,7 @@
                 if (!confirmed) return;
                 
                 // Try to get existing sign-in methods for this email
-                const methods = await firebase.auth().fetchSignInMethodsForEmail(user.email);
+                const methods = await auth.fetchSignInMethodsForEmail(user.email);
                 debugLog("Available sign-in methods for", user.email, ":", methods);
                 
                 if (methods.length <= 1) {
